add final filters to login and register

--- a/app/src/main/res/layout/clothe_rv_item.xml
+++ b/app/src/main/res/layout/clothe_rv_item.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
-    android:elevation="3dp"
-    app:cardCornerRadius="4dp">
+    android:layout_margin="@dimen/_5dp"
+    android:elevation="@dimen/_3dp"
+    app:cardCornerRadius="@dimen/_4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/idCL_item"
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/idIT_img"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/_0dp"
+            android:layout_height="@dimen/_200dp"
             android:contentDescription="@string/inspect"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,13 +33,13 @@
             android:id="@+id/idITV_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="@dimen/_1dp"
             android:maxLines="1"
-            android:padding="4dp"
+            android:padding="@dimen/_4dp"
             android:maxEms="17"
             android:ellipsize="end"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="@dimen/_15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idIT_img"
@@ -49,12 +49,12 @@
             android:id="@+id/idITV_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_8dp"
             android:maxLength="6"
             android:maxLines="1"
-            android:padding="4dp"
+            android:padding="@dimen/_4dp"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
