--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="8dp"
-            android:hint="Enter Title"
+            android:hint="@string/enter_title"
             android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:text="Upload Image"
+            android:text="@string/upload_image"
             android:textAllCaps="false"
             app:layout_constraintBottom_toTopOf="@+id/idTI_typeDropdown"
             app:layout_constraintEnd_toStartOf="@+id/idIMG_preview"
@@ -61,15 +61,17 @@
 
         <ImageView
             android:id="@+id/idIMG_preview"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="@dimen/_150dp"
+            android:layout_height="@dimen/_150dp"
+            android:layout_marginTop="@dimen/_16dp"
+            android:layout_marginBottom="@dimen/_16dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toTopOf="@+id/idTI_typeDropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/idBTN_upload_image"
-            app:layout_constraintTop_toBottomOf="@+id/idTI_title" />
+            app:layout_constraintTop_toBottomOf="@+id/idTI_title"
+            android:contentDescription="@string/inspect" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTI_typeDropdown"
@@ -92,8 +94,8 @@
                 android:layout_weight="1"
                 android:importantForAutofill="no"
                 android:inputType="none"
-                android:padding="14dp"
-                android:text="Choose Clothe"
+                android:padding="@dimen/_14sp"
+                android:text="@string/choose_clothe"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp"
@@ -122,7 +124,7 @@
                 android:importantForAutofill="no"
                 android:inputType="none"
                 android:padding="14dp"
-                android:text="Choose Gender"
+                android:text="@string/choose_gender"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp"
@@ -135,7 +137,7 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Size"
+            android:hint="@string/enter_size"
             android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
@@ -164,7 +166,7 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Price"
+            android:hint="@string/enter_price"
             android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
@@ -187,7 +189,7 @@
                 android:id="@+id/max_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_marginStart="@dimen/_6dp"
                 android:layout_weight="1"
                 android:text="@string/max_price_9999"
                 android:textColor="#FD0000"
@@ -199,8 +201,8 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Description"
-            android:minHeight="100dp"
+            android:hint="@string/enter_description"
+            android:minHeight="@dimen/_100dp"
             android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
@@ -213,7 +215,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="top"
-                android:minHeight="100dp"
+                android:minHeight="@dimen/_100dp"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:scrollbars="vertical"
@@ -226,9 +228,9 @@
             android:id="@+id/idBTN_add_clothe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/_32dp"
             android:background="@drawable/custom_button_back"
-            android:text="Add Item"
+            android:text="@string/add_item"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
