--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,8 +18,8 @@
             android:id="@+id/idRV_clothes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="1dp"
+            android:layout_marginStart="@dimen/_1dp"
+            android:layout_marginEnd="@dimen/_1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,11 +41,11 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/idFA_btnAdd"
             app:backgroundTint="#FF8080"
-            app:borderWidth="3dp"
+            app:borderWidth="@dimen/_3dp"
             android:backgroundTint="#151515"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="@dimen/_16dp"
 
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
