separate users data for different access

--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -27,7 +27,7 @@
             android:layout_marginBottom="8dp"
             android:hint="@string/enter_title"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idIMG_preview"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,8 +82,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
-            app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTI_genderDropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +96,7 @@
                 android:inputType="none"
                 android:padding="@dimen/_14sp"
                 android:text="@string/choose_clothe"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/_14sp"
                 tools:ignore="LabelFor" />
 
@@ -112,8 +109,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
-            app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTI_sizeDropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +123,7 @@
                 android:inputType="none"
                 android:padding="14dp"
                 android:text="@string/choose_gender"
-                android:textColor="@color/white"
+                android:textColor="@color/hint_text_color"
                 android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp"
                 tools:ignore="LabelFor" />
@@ -143,8 +138,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
-            app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTI_price"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -158,9 +151,8 @@
                 android:importantForAutofill="no"
                 android:inputType="none"
                 android:padding="@dimen/_14sp"
-                android:text="Choose Size"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:text="@string/choose_size"
+                android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/_14sp"
                 tools:ignore="LabelFor" />
 
