--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_swipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.LoginFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/login_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blue_shade_1">
 
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:fontFamily="sans-serif-medium"
+            android:letterSpacing="0.1"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_34sp"
+            app:layout_constraintBottom_toTopOf="@+id/idTILuserName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTILuserName"
             style="@style/TextInputLayout"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_150dp"
+            android:layout_marginTop="48dp"
             android:hint="@string/enter_username"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTILuserPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/idEdtUserName"
@@ -35,7 +51,6 @@
                 android:importantForAutofill="no"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -48,10 +63,9 @@
             style="@style/TextInputLayout"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16dp"
             android:hint="@string/enter_your_password"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idbtnLogin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +79,6 @@
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -74,11 +87,13 @@
             android:id="@+id/idbtnLogin"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_200dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/custom_button_back"
             android:text="@string/login"
+            android:textSize="@dimen/_18sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/idTVRegister"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idTILuserPassword" />
@@ -87,11 +102,11 @@
             android:id="@+id/idTVRegister"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16dp"
             android:text="@string/new_user_register_here"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idbtnLogin" />
