--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/registration_swipe_container"
     android:layout_width="match_parent"
@@ -7,27 +8,42 @@
     tools:context=".fragment.RegistrationFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/registration_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blue_shade_1">
 
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:fontFamily="sans-serif-medium"
+            android:letterSpacing="0.1"
+            android:text="@string/registration"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_34sp"
+            app:layout_constraintBottom_toTopOf="@+id/idTILuserName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTILuserName"
             style="@style/TextInputLayout"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_75dp"
+            android:layout_marginTop="48dp"
             android:hint="@string/enter_user_name"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTILuserPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/idEdtUserName"
@@ -36,7 +52,6 @@
                 android:importantForAutofill="no"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,10 +60,9 @@
             style="@style/TextInputLayout"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16dp"
             android:hint="@string/enter_your_password"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTILuserConfirmPassword"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +76,6 @@
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,10 +84,9 @@
             style="@style/TextInputLayout"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16dp"
             android:hint="@string/confirm_your_password"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idbtnRegister"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +100,6 @@
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -97,11 +108,12 @@
             android:id="@+id/idbtnRegister"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_200dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/custom_button_back"
             android:text="@string/register"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:textSize="@dimen/_18sp"
             app:layout_constraintBottom_toTopOf="@+id/idTVLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,6 +129,7 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idbtnRegister" />
