--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue_shade_1">#0e2433</color>
     <color name="blue_shade_2">#1C4966</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:overrise= "true">#296D98</color>
+    <color name="hint_text_color">#86FFFFFF</color>
 </resources>
