--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="_15sp">15sp</dimen>
     <dimen name="_6dp">6dp</dimen>
     <dimen name="_100dp">100dp</dimen>
+    <dimen name="_34sp">34sp</dimen>
 </resources>
