--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -41,7 +41,6 @@
                 android:importantForAutofill="no"
                 android:inputType="text"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -66,7 +65,6 @@
             android:layout_marginTop="@dimen/_16dp"
             android:layout_marginBottom="@dimen/_16dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toTopOf="@+id/idTI_typeDropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/idBTN_upload_image"
@@ -95,6 +93,7 @@
                 android:importantForAutofill="no"
                 android:inputType="none"
                 android:padding="@dimen/_14sp"
+                android:textColorHint="@color/white"
                 android:text="@string/choose_clothe"
                 android:textColor="@color/hint_text_color"
                 android:textSize="@dimen/_14sp"
@@ -165,7 +164,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/enter_price"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTI_description"
             app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +178,6 @@
                 android:importantForAutofill="no"
                 android:inputType="number"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
 
             <TextView
@@ -201,7 +199,7 @@
             android:hint="@string/enter_description"
             android:minHeight="@dimen/_100dp"
             android:padding="@dimen/_5dp"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/hint_text_color"
             app:hintTextColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,7 +215,6 @@
                 android:inputType="textMultiLine"
                 android:scrollbars="vertical"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:textSize="@dimen/_14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -228,6 +225,7 @@
             android:layout_marginTop="@dimen/_32dp"
             android:background="@drawable/custom_button_back"
             android:text="@string/add_item"
+            android:textSize="@dimen/_18sp"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
