--- a/app/src/main/res/drawable/custom_button_back.xml
+++ b/app/src/main/res/drawable/custom_button_back.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/blue_shade_1" />
-    <corners android:radius="20dp" />
+    android:shape="rectangle" >
+
+    <solid android:color="#FFFFFFFF" />
+
+    <stroke
+        android:width="1dp"
+        android:color="#FFCCCCCC" />
+    <gradient
+        android:startColor="@color/white"
+        android:centerColor="@color/white"
+        android:endColor="@color/white"/>
 
 </shape>
