--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -83,20 +83,23 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/idbtnLogin"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
-            android:background="@drawable/custom_button_back"
+            android:padding="16dp"
             android:text="@string/login"
-            android:textSize="@dimen/_18sp"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:textSize="@dimen/_18sp"
+            app:cornerRadius="10dp"
             app:layout_constraintBottom_toTopOf="@+id/idTVRegister"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idTILuserPassword" />
+
 
         <TextView
             android:id="@+id/idTVRegister"
