--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -104,20 +104,22 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/idbtnRegister"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
-            android:background="@drawable/custom_button_back"
+            android:padding="16dp"
             android:text="@string/register"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/_18sp"
+            app:cornerRadius="10dp"
             app:layout_constraintBottom_toTopOf="@+id/idTVLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idTILuserConfirmPassword" />
+
 
         <TextView
             android:id="@+id/idTVLogin"
