--- a/app/src/main/res/layout/clothe_rv_item.xml
+++ b/app/src/main/res/layout/clothe_rv_item.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="4dp"
-                android:text="Jean | Female"
+                tools:text="Jean | Female"
                 android:textColor="#8A000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/idITV_price"
